# routes/index.js
@@ -4,5 +4,6 @@ const usersController = require('../controllers/main');
 routes.get('/', usersController.main);
 routes.use('/users', require('./users'));
 routes.use('/posts', require('./posts'));
+routes.use('/auth', require('./auth'));
 
 module.exports = routes;
